@@ -111,6 +111,7 @@ gt_SIGNALBLOCKING
 gt_SIGINFO
 gt_FUNC_SETENV
 gt_FUNC_ERROR_AT_LINE
+gl_PATHMAX
 gt_SETLOCALE
 
 gt_PREREQ_HOSTNAME
