@@ -1,3 +1,7 @@
+2003-02-28  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Invoke gl_PATHMAX.
+
 2003-02-22  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (ps, pdf): Remove rules, redundant with automake 1.7.2.
